- Add fl_logr_log() and vlog() methods so that log functions/handlers in third-party appliactions can be tied to these. - Socket module   - Ability to trace protocol name (supplied to the socket call)   - In fl_socket_process_reads(), we now clear the sockfd bit in both the FD sets, i.e. the select_rbits (set by the apps) and exec_rbits (used in select()).   - Check/Verify length of socket name in alloc (to be consistent with fl_socket_socket() method) - Timer module: minor rearrangement of logic in fl_timers_dispatch() to look same between socket read processing and timers fire processing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ enable_language(C)
 
 option(BUILD_TESTS "Build unit tests" OFF)
 option(ENABLE_CC_DEBUG_SYMBOLS "Produce debugging information for GDB" ON)
-option(ENABLE_CC_OPTIMIZATION "Enable optimizations that can be done by GCC" ON)
+option(ENABLE_CC_OPTIMIZATION "Enable optimizations that can be done by GCC" OFF)
 option(ENABLE_ASSERTIONS "Enable assert calls" ON)
 
 if(ENABLE_CC_DEBUG_SYMBOLS)
@@ -45,6 +45,12 @@ endif()
 
 if(ENABLE_CC_OPTIMIZATION)
   add_compile_options(-O3)
+else()
+  add_compile_options(-O0)
+endif()
+
+if(ENABLE_ASSERTIONS)
+  add_compile_options(-DENABLE_ASSERTIONS)
 endif()
 
 add_compile_options(
