Travis CI: Fix dist (not a sequence) and add configure step before invoking make.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ arch:
 os:
   - linux
 
-dist:
-  - xenial
+dist: xenial
 
 compiler:
   - gcc
@@ -15,4 +14,5 @@ compiler:
 script:
   - cd ${TRAVIS_BUILD_DIR}
   - ./autogen.sh
+  - ./configure
   - make
