Remove _s suffix from library name since we changed the name of the generated library earlier.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ install(
 )
 
 install(TARGETS
-  ${PROJECT_NAME}_s
+  ${PROJECT_NAME}
   ARCHIVE DESTINATION ${LIBRARY_INSTALL_DIR}
   LIBRARY DESTINATION ${LIBRARY_INSTALL_DIR}
 )
